force-app/main/default/objects/Insurance_Provider__c/Insurance_Provider__c.object-meta.xml
<CustomObject>
    <label>Insurance Provider</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>