force-app/main/default/objects/Insurance_Provider__c/fields/Insurance_Provider_Address__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider_Address__c</fullName>
    <label>Insurance Provider Address</label>
    <type>TextArea</type>
</CustomField>