force-app/main/default/objects/Insurance_Provider__c/fields/Insurance_Provider_Code__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider_Code__c</fullName>
    <inlineHelpText>Enter the 6 digit insurance provider code</inlineHelpText>
    <label>Insurance Provider Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>