force-app/main/default/objects/Insurance_Provider__c/fields/Insurance_Provider_Website__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider_Website__c</fullName>
    <label>Insurance Provider Website</label>
    <type>Url</type>
</CustomField>