force-app/main/default/objects/Insurance_Provider__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insurance_Provider_Rating</valueSetName>
    </valueSet>
</CustomField>