force-app/main/default/objects/Insurance_Provider__c/fields/Representative_Email__c.field-meta.xml
<CustomField>
    <fullName>Representative_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Representative Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>